# turtlecoin-wallet-backend-cpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Common/: CryptoNoteTools.h
src/CryptoNoteCore/: Mixins.h
src/Errors/: ValidateParameters.cpp
src/Nigel/: Nigel.h
src/NodeRpcProxy/: NodeRpcProxy.cpp
src/Rpc/: HttpClient.h
src/Serialization/: CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  SerializationTools.h
src/SubWallets/: SubWallet.cpp
src/Utilities/: FormatTools.cpp  ThreadSafeDeque.h
src/WalletBackend/: Transfer.cpp  WalletBackend.cpp  WalletSynchronizer.cpp
src/config/: Constants.h
